force-app/main/default/objects/Apttus_Config2__PriceRuleset__c/fields/Apttus_Config2__EnableCurrency__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EnableCurrency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether currency is enabled for amount based price adjustments. Only applicable in a multi-currency org.</description>
    <inlineHelpText>Indicates whether currency is enabled for amount based price adjustments. Only applicable in a multi-currency org.</inlineHelpText>
    <label>Enable Currency</label>
    <type>Checkbox</type>
</CustomField>