force-app/main/default/objects/Apttus_Config2__PriceRuleset__c/fields/Apttus_Config2__StopProcessingMoreRules__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__StopProcessingMoreRules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator to prevent subsequent rules from processing</description>
    <label>Stop Processing More Rules</label>
    <type>Checkbox</type>
</CustomField>